# Phyre

./: .gitattributes  README.md  package.json  tsconfig.json  vitest.config.js
lib/: dev.js
lib/internal/env/: getPublicEnvs.js
lib/internal/plugins/: envValidation.js  ignoreCss.js
lib/internal/plugins/ctx/: routesRebuild.js  serverRebuild.js
lib/internal/router/: buildCTX.js  buildRouter.js  route-scanner.js
lib/internal/router/utils/: buildName.js  buildPath.js  buildRoute.js  (+3 more)
lib/internal/server/: api-router.js  generateMetaTagsHTML.js  server-template.js  startWebSocket.js
rust/: Cargo.toml  index.d.ts  index.js  package.json
rust/backup/src/: lib.rs
rust/src/: build_router.rs  lib.rs  read_files.rs  utils.rs
rust/src/utils/: build_name.rs  build_path.rs  build_route.rs  build_tree.rs
rust/tests/: build_name_test.rs  build_path_test.rs  build_route_test.rs
src/: dev.js  dev.ts  prod.js
src/internal/env/: getPublicEnvs.ts
src/internal/plugins/: envValidation.js  postcss.js
src/internal/router/: buildCTX.ts  route-scanner.ts  route-wrapper.js
src/internal/server/: globals-middleware.js  server-prod.js  server-template.ts  startWebSocket.ts
src/internal/utils/: getPhyreConfig.ts
src/types/: api_routes.ts  config.ts  routes.ts
tests/integration/router/: route-scanner.test.js
tests/unit/env/: getPublicEnvs.test.js
tests/unit/js/: first.test.js
tests/unit/router/: route-wrapper.test.js
tests/unit/server/: generateMetaTagsHTML.test.js  globals-middleware.test.js  startWebSocket.test.js
tests/unit/utils/: getPhyreConfig.test.js
(+17 files in other folders)
