
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "phyre_core"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
regex = "1.12.2"
once_cell = "1.19"
instant = "0.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
